MODIFICACION DE SUBTITULO

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1> TERMIS </h1>
-    <H2> Productos</H2>
+    <H2> PRODUCTOS</H2>
     <h3>Termos</H3> <h3>Botellas</h3> <h3>Vasos</h3>
     <p> Los térmicos que ofrecemos son de máxima calidad, triple sello y con 24hs de duracion frio/caliente </p>
     <img src="termo 1L.jpg" lang="TERMO DE 1L VERDE" height="700" alt="500"
